# FinalDjango

./: .flake8  Makefile  pyproject.toml
.github/workflows/: my-project-dev.yml
apps/: router.py
apps/api/: urls.py
config/: settings.py  urls.py
